<resources>
    <string name="app_name">Solitaire</string>

    <string name="bottom_menu_game">Game</string>
    <string name="bottom_menu_restart">Restart</string>
    <string name="bottom_menu_record">Record</string>
    <string name="bottom_menu_movie">Movie</string>
    <string name="bottom_menu_settings">Settings</string>

    <string name="restart_dialog_title">新しいゲーム</string>
    <string name="restart_dialog_text">新しいゲームを開始しますか？</string>
    <string name="restart_dialog_positive">新しいゲーム</string>
    <string name="restart_dialog_negative">キャンセル</string>

    <string name="record_rank_title">移動回数</string>
    <string name="record_rank_no_data">表示できるデータがありません</string>
    <string name="record_reset_button">リセット</string>

    <string name="reset_dialog_title">履歴の削除</string>
    <string name="reset_dialog_text">これまでの履歴を削除しますか？</string>
    <string name="reset_dialog_positive">削除する</string>
    <string name="reset_dialog_negative">キャンセル</string>

    <string name="reset_movie_dialog_title">動画を削除</string>
    <string name="reset_movie_dialog_text">動画を削除しますか？</string>

    <string name="movie_header_text">動画を再生する</string>

    <string name="setting_about_this_app">このアプリについて</string>
    <string name="setting_app">アプリケーションプライバシーポリシー</string>
    <string name="setting_oss">オープンソースライセンス</string>
    <string name="setting_app_version">アプリバージョン</string>
    <string name="setting_app_share">アプリを共有する</string>
    <string name="setting_app_assessment">アプリを評価する</string>
    <string name="setting_other_app">ほかのアプリ</string>
    <string name="setting_navigate_pro">広告を表示しない</string>
    <string name="setting_music">音楽</string>
    <string name="setting_app_music">音楽をかける</string>
    <string name="setting_notification">通知</string>
    <string name="setting_notification_on">通知を有効にする</string>
    <string name="setting_question_title">お問い合わせ</string>
    <string name="setting_question">お問い合わせはこちら</string>
    <string name="setting_question_mail_subject">Solitaireについての問い合わせ</string>
    <string name="setting_backup_and_restore">記録を保存する</string>
    <string name="setting_backup">保存する</string>
    <string name="setting_restore">復元する</string>
    <string name="setting_sign_out">サインアウトする</string>
    <string name="setting_question_text">アプリバージョン：%1s\nOSバージョン：Android %2d \n 機種名：%3s\n日にち：%4s</string>
    <string name="setting_share_text">ソリティアをプレイしてみよう\n https://play.google.com/store/apps/details?id=io.github.kurramkurram.solitaire</string>

    <string name="complete_text">Congratulations!!</string>

    <string name="auto_complete_button_text">自動回収</string>
    <string name="auto_complete_dialog_title">自動回収</string>
    <string name="auto_complete_dialog_text">自動回収を行いますか？\n移動回数・経過時間は手動で行う場合より最適化されないことがあります。</string>
    <string name="auto_complete_checkbox">以後表示しない</string>
    <string name="auto_complete_dialog_positive">自動回収する</string>
    <string name="auto_complete_dialog_negative">キャンセル</string>

    <string name="start_movie_dialog_title">動画撮影について</string>
    <string name="start_movie_dialog_text">動画の撮影を行いますか？\n動画は最新のものが6つだけ保存され、古いものは削除されていきます。</string>
    <string name="start_movie_dialog_positive">同意して撮影する</string>
    <string name="start_movie_dialog_negative">キャンセル</string>

    <string name="analysis_success_count">成功回数</string>
    <string name="analysis_success_rate">成功率</string>
    <string name="analysis_success_latest">一番新しい成功記録</string>
    <string name="analysis_success_oldest">一番古い成功記録</string>
    <string name="analysis_success_smallest">最小移動回数の成功記録</string>
    <string name="analysis_success_largest">最多移動回数の成功記録</string>
    <string name="analysis_success_shortest">最短の成功記録</string>
    <string name="analysis_success_longest">最長の成功記録</string>

    <string name="graph_title_success_count">成功数</string>
    <string name="graph_title_success_time">成功時間</string>

    <string name="graph_average_title">平均</string>
    <string name="graph_average_value">%s回</string>
    <string name="graph_duration">%1s ~ %2s</string>
    <string name="graph_time_value">%s秒台</string>

    <string name="toast_backup_success">バックアップに成功しました</string>
    <string name="toast_backup_failure">バックアップに失敗しました</string>
    <string name="toast_restore_success">リストアに成功しました</string>
    <string name="toast_restore_failure">リストアに失敗しました</string>
    <string name="toast_sign_out">サインアウトしました</string>

    <string name="loading_dialog_saving">保存中です</string>
    <string name="loading_dialog_restoring">復元中です</string>

    <string name="notification_channel_recoding">録画中の通知</string>
    <string name="notification_recoding_title">録画中</string>
    <string name="notification_recoding_description">画面録画中をしています</string>

    <string name="navigate_pro">有償版のアプリを利用する</string>
    <string name="navigate_pro_description">Google Playストアから有償版をご購入いただけます。\n有償版アプリを利用することで広告を表示しないアプリを利用できます。\n記録を保存して復元することで記録を引き継ぐことができます。</string>

    <string name="notification_on_question">通知を有効にしますか？</string>
    <string name="notification_on_title">設定から通知を有効にする</string>
    <string name="notification_on_description">通知を有効にするには設定からONにする必要があります。\n通知を有効にすることで%1sからのお知らせを受け取ることができます。</string>

    <string name="content_description_arrow">次の画面へ進みます</string>

    <string name="app_confirm_dialog_description1">%1sを利用するには</string>
    <string name="app_confirm_dialog_description2">アプリケーションプライバシーポリシー</string>
    <string name="app_confirm_dialog_description3">に同意する必要があります</string>
    <string name="app_confirm_dialog_agree_button">同意する</string>
</resources>