<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/text"
        style="@style/SolitaireDialogStyle.Text"
        android:text="@string/reset_dialog_text"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/positive_button"
        style="@style/SolitaireDialogStyle.Button"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/reset_dialog_positive"
        app:layout_constraintTop_toBottomOf="@id/text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/negative_button"
        style="@style/SolitaireDialogStyle.Button"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/reset_dialog_negative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/positive_button"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/reset_image"
            android:layout_width="@dimen/dialog_icon_wh"
            android:layout_height="@dimen/dialog_icon_wh"
            android:layout_margin="@dimen/dialog_margin"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:gravity="start"
            android:text="@string/reset_dialog_title"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/dialog_title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/reset_image"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>