<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:checked="@={viewModel.isChecked()}"
            android:gravity="center_vertical"
            android:text="@string/auto_complete_checkbox"
            android:textColor="@android:color/darker_gray"
            android:theme="@style/Checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <TextView
            android:id="@+id/text"
            style="@style/SolitaireDialogStyle.Text"
            android:text="@string/auto_complete_dialog_text"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/reset_image"
                android:layout_width="@dimen/dialog_icon_wh"
                android:layout_height="@dimen/dialog_icon_wh"
                android:layout_margin="@dimen/dialog_margin"
                android:src="@drawable/warning"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_margin"
                android:gravity="start"
                android:text="@string/auto_complete_dialog_title"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/dialog_title_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/reset_image"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox">

            <TextView
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/auto_complete_dialog_positive"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/negative_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/auto_complete_dialog_negative"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="io.github.kurramkurram.solitaire.viewmodel.SolitaireViewModel" />
    </data>
</layout>
